--- a/style.css
+++ b/style.css
@@ -566,10 +566,10 @@ body::-webkit-scrollbar-thumb {
   margin: 0 auto;
   color: white;
   font-family: "Cabin MediumItalic";
-  text-transform: uppercase;
   margin-top: 123px;
   font-size: 30px;
-  line-height: 35px;
+  line-height: 42px;
+  text-align: left;
 }
 
 .artist-profil-container .black-filter {
@@ -577,8 +577,8 @@ body::-webkit-scrollbar-thumb {
   width: 523px;
   height: 523px;
   position: absolute;
-  bottom: 300px;
-  left: 29.45%;
+  bottom: 293px;
+  left: 454px;
   opacity: 0;
   transition-property: opacity;
   transition-duration: 0.5s;
